k8s/coma/apps/invoiceninja/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invoiceninja
  namespace: invoiceninja
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: onkaparingait-https
  hostnames:
    - invoiceninja.onkaparingait.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: invoiceninja
          port: 9000
